--- a/package.json
+++ b/package.json
@@ -2,22 +2,38 @@
   "name": "lit-todo",
   "version": "1.0.0",
   "description": "Lit 2.0 Todo app",
-  "main": "index.js",
+  "author": "Yaroslav Grachev",
+  "license": "MIT",
+  "keywords": [
+    "lit",
+    "web-components"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "snowpack dev",
+    "start:old": "concurrently \"tsc --watch\" \"web-dev-server --config server.config.mjs\"",
+    "build": "snowpack build",
+    "lint": "npm run lint:lit-analyzer && npm run lint:eslint",
+    "lint:eslint": "eslint 'src/**/*.ts'",
+    "lint:lit-analyzer": "lit-analyzer",
+    "format": "prettier src/* --write"
   },
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/tuul-wq/lit-todo.git"
   },
-  "keywords": [
-    "lit",
-    "web-components"
-  ],
-  "author": "Yaroslav Grachev",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/tuul-wq/lit-todo/issues"
+  "dependencies": {
+    "lit": "^2.0.0-rc.1"
   },
-  "homepage": "https://github.com/tuul-wq/lit-todo#readme"
+  "devDependencies": {
+    "@snowpack/plugin-typescript": "^1.2.1",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
+    "concurrently": "^6.0.2",
+    "eslint": "^7.25.0",
+    "lit-analyzer": "^1.2.1",
+    "path": "^0.12.7",
+    "prettier": "^2.2.1",
+    "snowpack": "^3.3.5",
+    "typescript": "^4.2.4"
+  }
 }
